--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 button{
     cursor: pointer;
 }
+
+/* tailwind.css or global.css */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
