complete after many changes

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,9 @@ button{
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;     /* Firefox */
 }
+
+.split-text {
+      color: linear-gradient(to bottom , black 50%, white 50%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
